Tutorial-GiRaFFEfood_NRPy-Split_Monopole: Fixing multiple small bugs preventing agreement.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "# Generic function to convert contravariant vectors from a spherical to Cartesian basis.\n",
-    "def change_basis_spherical_to_Cartesian(somevector_sphD):\n",
+    "def change_basis_spherical_to_Cartesian_D(somevector_sphD):\n",
     "    # Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
     "    drrefmetric__dx_0UDmatrix = sp.Matrix([[sp.diff(rfm.xxSph[0],rfm.xx[0]), sp.diff(rfm.xxSph[0],rfm.xx[1]), sp.diff(rfm.xxSph[0],rfm.xx[2])],\n",
     "                                           [sp.diff(rfm.xxSph[1],rfm.xx[0]), sp.diff(rfm.xxSph[1],rfm.xx[1]), sp.diff(rfm.xxSph[1],rfm.xx[2])],\n",
@@ -146,7 +146,23 @@
     "        for j in range(3):\n",
     "            somevectorD[i] = drrefmetric__dx_0UDmatrix[(j,i)]*somevector_sphD[j]\n",
     "\n",
-    "    return somevectorD"
+    "    return somevectorD\n",
+    "\n",
+    "# Generic function to convert covariant vectors from a spherical to Cartesian basis.\n",
+    "def change_basis_spherical_to_Cartesian_U(somevector_sphU):\n",
+    "    # Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
+    "    drrefmetric__dx_0UDmatrix = sp.Matrix([[sp.diff(rfm.xxSph[0],rfm.xx[0]), sp.diff(rfm.xxSph[0],rfm.xx[1]), sp.diff(rfm.xxSph[0],rfm.xx[2])],\n",
+    "                                           [sp.diff(rfm.xxSph[1],rfm.xx[0]), sp.diff(rfm.xxSph[1],rfm.xx[1]), sp.diff(rfm.xxSph[1],rfm.xx[2])],\n",
+    "                                           [sp.diff(rfm.xxSph[2],rfm.xx[0]), sp.diff(rfm.xxSph[2],rfm.xx[1]), sp.diff(rfm.xxSph[2],rfm.xx[2])]])\n",
+    "    dx__drrefmetric_0UDmatrix = drrefmetric__dx_0UDmatrix.inv()\n",
+    "\n",
+    "    somevectorU = ixp.zerorank1()\n",
+    "\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            somevectorU[i] = dx__drrefmetric_0UDmatrix[(j,i)]*somevector_sphU[j]\n",
+    "\n",
+    "    return somevectorU"
    ]
   },
   {
@@ -203,8 +219,8 @@
    "outputs": [],
    "source": [
     "# Generic function for all 1D tests: Valencia 3-velocity from EU and BU\n",
-    "def compute_ValenciavU_from_EU_and_BU(EU, BU, gammaDD=None):\n",
-    "    # Now, we calculate v^i = ([ijk] E^j B^k) / B^2,\n",
+    "def compute_ValenciavU_from_ED_and_BU(ED, BU, gammaDD=None):\n",
+    "    # Now, we calculate v^i = ([ijk] E_j B_k) / B^2,\n",
     "    # where [ijk] is the Levi-Civita symbol and B^2 = \\gamma_{ij} B^i B^j$ is a trivial dot product in flat space.\n",
     "    LeviCivitaSymbolDDD = ixp.LeviCivitaSymbol_dim3_rank3()\n",
     "\n",
@@ -218,11 +234,15 @@
     "        for j in range(3):\n",
     "            B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
     "\n",
+    "    BD = ixp.zerorank1()\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            BD[i] = gammaDD[i][j]*BU[j]\n",
     "    ValenciavU = ixp.zerorank1()\n",
     "    for i in range(3):\n",
     "        for j in range(3):\n",
     "            for k in range(3):\n",
-    "                ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * EU[j] * BU[k] / B2\n",
+    "                ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * ED[j] * BD[k] / B2\n",
     "\n",
     "    return ValenciavU"
    ]
@@ -246,7 +266,7 @@
    "outputs": [],
    "source": [
     "def GiRaFFEfood_NRPy_generate_initial_data(ID_type = \"DegenAlfvenWave\", stagger_enable = False,**params):\n",
-    "    global AD, Valencia_vU\n",
+    "    global AD, ValenciavU\n",
     "#     if ID_type == \"DegenAlfvenWave\":\n",
     "#         mu_DAW = par.Cparameters(\"REAL\",thismodule,[\"mu_DAW\"], -0.5) # The wave speed\n",
     "#         AD = Axyz_func(Ax_DAW, Ay_DAW, Az_DAW, stagger_enable,\n",
@@ -258,7 +278,7 @@
     "    if ID_type == \"SplitMonopole\":\n",
     "        import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_Split_Monopole as gfsm\n",
     "        AD = gfcf.Axyz_func_spherical(gfsm.Ar_SM,gfsm.Ath_SM,gfsm.Aph_SM,stagger_enable,**params)\n",
-    "        Valencia_vsmD = ValenciavU_func_SM(C=C_SM,M=sks.M,a=sks.a,KerrSchild_radial_shift=sks.r0,alpha=alpha,betaU=betaU,sqrtgammaDET=sqrtgammaDET)"
+    "        ValenciavU = gfsm.ValenciavU_func_SM(**params)"
    ]
   }
  ],
