Tutorial-SommerfeldBoundaryCondition: Fixed documentation on advection term in generic coordinates

--- a/Tutorial-SommerfeldBoundaryCondition.ipynb
+++ b/Tutorial-SommerfeldBoundaryCondition.ipynb
@@ -900,7 +900,7 @@
     "Finally, we calculate $\\frac{df}{dt}$ without the $\\frac{k}{r^{n+1}}$ term;\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial f}{\\partial t} = -\\frac{v}{r} \\left( x^i \\partial_i f + \\left( f - f_0 \\right) \\right).\n",
+    "\\frac{\\partial f}{\\partial t} = -\\frac{v}{r(x^i)} \\left[r(x^i) \\frac{\\partial x^i}{\\partial r} \\partial_i f + (f - f_0)\\right].\n",
     "$$"
    ]
   },
@@ -947,7 +947,7 @@
     " Here we formulate a way to approximate $k$. If our solution satisfies the advection equation both at the ghost zones and at interior points close to the boundaries, then we may find $k$ by determining the portion of $f$ that is not accounted for by the equation\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial f}{\\partial t} = \\left[\\frac{\\partial f}{\\partial t} \\right]_{adv}= -\\frac{v}{r} \\left( x^i \\partial_i f + \\left( f - f_0 \\right) \\right).\n",
+    "\\frac{\\partial f}{\\partial t} = \\left[\\frac{\\partial f}{\\partial t} \\right]_{adv} = -\\frac{v}{r(x^i)} \\left[r(x^i) \\frac{\\partial x^i}{\\partial r} \\partial_i f + (f - f_0)\\right].\n",
     "$$\n",
     "\n",
     "The above is the advection equation we arrive at assuming $f$ behaves purely as an outgoing spherical wave. For an interior point directly adjacent to a ghost zone point, $f$ must satisfy **both** the time evolution equation for prescribed points within the interior, $\\left[\\frac{\\partial f}{\\partial t} \\right]_{evol}$, and the advection equation $\\left[\\frac{\\partial f}{\\partial t} \\right]_{adv}$. We then find the difference as\n",
@@ -1546,7 +1546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
