--- a/in_progress/Tutorial-GiRaFFE_NRPy-Numerical_Methods.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Numerical_Methods.ipynb
@@ -8,21 +8,37 @@
     "\n",
     "## Authors: Patrick Nelson &\n",
     "\n",
-    "In this notebook, we will introduce the numerical methods with which we will solve the GRFFE equations.\n",
+    "In this notebook, we will introduce the numerical methods with which we solve the GRFFE equations.\n",
     "\n",
-    "`GiRaFFE_NRPy` supports uniform Cartesian grids at the moment. We plan to expand this using the many options NRPy+ offers us. The grids are, unless otherwise specified, cell-centered. We employ two different prescriptions; in the first, all quantities are sampled at cell centers, and in the second the vector potential, magnetic field, and scalar potential are staggered. They will be referred to as unstaggered and staggered, respectively.\n",
+    "`GiRaFFE_NRPy` only supports uniform Cartesian grids at the moment, but we plan on expanding to the curvilinear coordinate systems NRPy+ offers in the near future. The grids are, unless otherwise specified, cell-centered. We employ two different prescriptions; in the first, all quantities are sampled at cell centers. In the second, the vector potential, magnetic field, and scalar potential are staggered. They will be referred to as unstaggered and staggered, respectively.\n",
     "\n",
     "Time evolution is accomplished through the method of lines (MOL) with a Runge-Kutta fourth-order scheme and finite-difference methods and an approximate Riemann solver for spatial derivatives.\n",
     "\n",
     "Second-order finite-differencing methods are used in the computation of the magnetic field as the curl of the vector potential, as well as in the gauge term of the vector potential evolution equation, $\\partial_i (\\alpha \\Phi - \\beta^j A_j)$, and the evolution equation for the scalar potential $\\Phi$. \n",
     "\n",
+    "<font color='yellow'><b>Terrence says: can other FD options be chosen?</b></font>\n",
+    "\n",
+    "\n",
     "### Step 0: Initial Data\n",
     "\n",
     "Initial data is computed by the `GiRaFFEfood_NRPy` modules and sets the vector potential $A_i$ and Valencia three-velocity $\\bar{v}^i$. The scalar potential $\\Phi$ is always set to 0. \n",
     "\n",
-    "The physical scenarios for which we generate initial data are presented as expressions for the vector potential $A_i$ and electric field $E_i$. After setting the vector potential directly, the velocity is calculated as $$\\bar{v}^i = \\frac{\\epsilon^{ijk} E_j B_k}{B^2}$$, where $\\epsilon^{ijk} = [ijk]/\\sqrt{\\gamma}$, $\\gamma$ is the three-metric determinant, and $B_k = \\gamma_{ik} B^i$ is calculated analytically as $B^i = \\epsilon^{ijk} \\partial_j A_k$.\n",
+    "The physical scenarios for which we generate initial data are presented as expressions for the vector potential $A_i$ and electric field $E_i$. After setting the vector potential directly, the velocity is calculated as \n",
     "\n",
-    "We then numerically set $B^i$ according to the same formula as above, but using second-order finite-differencing. Finally, the densitized Poynting flux is set numerically as $\\tilde{S}_i = \\frac{\\bar{v}_i \\sqrt{\\gamma}B^2}{4 \\pi}$.\n",
+    "$$\n",
+    "\\bar{v}^i = \\frac{\\epsilon^{ijk} E_j B_k}{B^2},\n",
+    "$$\n",
+    "\n",
+    "where $\\epsilon^{ijk} = [ijk]/\\sqrt{\\gamma}$, $\\gamma$ is the three-metric determinant, and $B_k = \\gamma_{ik} B^i$ is calculated analytically as $B^i = \\epsilon^{ijk} \\partial_j A_k$.\n",
+    "\n",
+    "We then numerically set $B^i$ according to the same formula as above, but using second-order finite-differencing. Finally, the densitized Poynting flux is set numerically as \n",
+    "\n",
+    "$$\n",
+    "\\tilde{S}_i = \\frac{\\bar{v}_i \\sqrt{\\gamma}B^2}{4 \\pi}.\n",
+    "$$\n",
+    "\n",
+    "<font color='yellow'><b>Terrence says: why not use the analytical version of B?</b></font>\n",
+    "\n",
     "\n",
     "### Step 1a: Evolution equations--unstaggered\n",
     "\n",
@@ -87,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
