--- a/in_progress/Tutorial-GiRaFFEfood_NRPy-Split_Monopole.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy-Split_Monopole.ipynb
@@ -106,13 +106,16 @@
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_Common_Functions as gfcf # Some useful functions for GiRaFFE initial data.\n",
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
+    "import Min_Max_and_Piecewise_Expressions as noif\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cartesian\")\n",
     "rfm.reference_metric()\n",
     "# Step 1a: Set commonly used parameters.\n",
     "thismodule = \"GiRaFFEfood_NRPy_Split_Monopole\"\n",
     "\n",
     "# The solution depends on a constant C\n",
-    "C_SM = par.Cparameters(\"REAL\",thismodule,[\"C_SM\"], 1.0)"
+    "C_SM = par.Cparameters(\"REAL\",thismodule,[\"C_SM\"], 1.0)\n",
+    "par.Cparameters(\"bool\",thismodule,\"drop_fr\",True)\n",
+    "import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_Split_Monopole # We do this just to set a boolean parameter."
    ]
   },
   {
@@ -128,7 +131,7 @@
     "\\begin{align}\n",
     "f(r) =& \\ \\frac{r^2(2r-3M)}{8M^3} L \\left(\\frac{2M}{r}\\right) \\\\\n",
     "&+ \\frac{M^2+3Mr-6r^2}{12M^2} \\ln \\frac{r}{2M} \\\\\n",
-    "&+ \\frac{11}{72} + \\frac{M}{3r} + \\frac{r}{2M} - \\frac{r^2}{M^2}, \\\\\n",
+    "&+ \\frac{11}{72} + \\frac{M}{3r} + \\frac{r}{2M} - \\frac{r^2}{2M^2}, \\\\\n",
     "\\end{align}\n",
     "where $L(x) = {\\rm Li}_2 (x) + \\frac{1}{2} \\ln x \\ln (1-x)$ and ${\\rm Li}_2 (x)$ is known as the dilogarithm function. We will use the C library `gsl` to handle this special function. In order to do so, we must tell NRPy+ that `nrpyDilog` will be our code word that means \"use the `gsl` dilogarithm function, `gsl_sf_dilog`\". This is done by simply creating a new sympy function using `Function()` and then adding the name-value pair to the dictionary `custom_functions_for_SymPy_ccode`."
    ]
@@ -144,11 +147,16 @@
     "custom_functions_for_SymPy_ccode[\"nrpyDilog\"] = \"gsl_sf_dilog\"\n",
     "\n",
     "def f_of_r(r,M):\n",
+    "    if par.parval_from_str(\"drop_fr\"):\n",
+    "        return sp.sympify(0)\n",
     "    x = sp.sympify(2)*M/r\n",
-    "    L = nrpyDilog(x) + sp.Rational(1,2)*sp.log(x)*sp.log(sp.sympify(1)-x)\n",
+    "    L = sp.sympify(0) + \\\n",
+    "        noif.coord_greater_bound(x,sp.sympify(0))*noif.coord_less_bound(x,sp.sympify(1))*nrpyDilog(x)\\\n",
+    "       +sp.Rational(1,2)*sp.log(noif.coord_greater_bound(x,sp.sympify(0))*x + noif.coord_leq_bound(x,sp.sympify(1)))\\\n",
+    "       *sp.log(noif.coord_less_bound(x,sp.sympify(1))*(sp.sympify(1)-x) + noif.coord_geq_bound(x,sp.sympify(1)))\n",
     "    f = r*r*(sp.sympify(2)*r-sp.sympify(3)*M)*sp.Rational(1,8)/(M**3)*L\\\n",
-    "       +(M*M+sp.sympify(3)*M*r-sp.sympify(6)*r*r)*sp.Rational(1,12)/(M*M)*sp.log(r*sp.Rational(1,2)/M)\\\n",
-    "       +sp.Rational(11,72) + M*sp.Rational(1,3)/r + r*sp.Rational(1,2)/M - r*r/(M*M)\n",
+    "      +(M*M+sp.sympify(3)*M*r-sp.sympify(6)*r*r)*sp.Rational(1,12)/(M*M)*sp.log(r*sp.Rational(1,2)/M)\\\n",
+    "      +sp.Rational(11,72) + M*sp.Rational(1,3)/r + r*sp.Rational(1,2)/M - r*r*sp.Rational(1,2)/(M*M)\n",
     "    return f"
    ]
   },
@@ -159,7 +167,7 @@
     "We will also need the derivative of $f(r)$:\n",
     "\\begin{align}\n",
     "f'(r) =& \\ \\frac{2r(2r-3M)+2r^2}{8M^3} L \\left(\\frac{2M}{r}\\right) + \\frac{r^2(2r-3M)}{8M^3} L' \\left(\\frac{2M}{r}\\right) \\left( -\\frac{2M}{r^2} \\right) \\\\\n",
-    "&+ \\frac{3M-12r}{12M^2} \\ln \\frac{r}{2M} + \\frac{M^2+3Mr-6r^2}{12M^2} \\frac{2M}{r} (2M) \\\\\n",
+    "&+ \\frac{3M-12r}{12M^2} \\ln \\frac{r}{2M} + \\frac{M^2+3Mr-6r^2}{12M^2} \\frac{2M}{r} \\frac{1}{2M} \\\\\n",
     "&- \\frac{M}{3r^2} + \\frac{1}{2M} - \\frac{2r}{M^2}. \\\\\n",
     "\\end{align}\n",
     "\n",
@@ -171,9 +179,9 @@
     "\\end{align}\n",
     "We simplify this some.\n",
     "\\begin{align}\n",
-    "f'(r) =& \\ \\frac{6r^2-3M}{8M^3} L \\left(\\frac{2M}{r}\\right) - \\frac{2r-3M}{4M^2} L' \\left(\\frac{2M}{r}\\right)\\\\\n",
-    "&+ \\frac{3M-12r}{12M^2} \\ln \\frac{r}{2M} + \\frac{M^2+3Mr-6r^2}{3r} \\\\\n",
-    "&- \\frac{M}{3r^2} + \\frac{1}{2M} - \\frac{2r}{M^2}. \\\\\n",
+    "f'(r) =& \\ \\frac{3r^2-3Mr}{4M^3} L \\left(\\frac{2M}{r}\\right) - \\frac{2r-3M}{4M^2} L' \\left(\\frac{2M}{r}\\right)\\\\\n",
+    "&+ \\frac{3M-12r}{12M^2} \\ln \\frac{r}{2M} + \\frac{M^2+3Mr-6r^2}{12rM^2} \\\\\n",
+    "&- \\frac{M}{3r^2} + \\frac{1}{2M} - \\frac{r}{M^2}. \\\\\n",
     "\\end{align}\n"
    ]
   },
@@ -184,12 +192,19 @@
    "outputs": [],
    "source": [
     "def fp_of_r(r,M):\n",
+    "    if par.parval_from_str(\"drop_fr\"):\n",
+    "        return sp.sympify(0)\n",
     "    x   = sp.sympify(2)*M/r\n",
-    "    L   = nrpyDilog(x) + sp.Rational(1,2)*sp.log(x)*sp.log(sp.sympify(1)-x)\n",
-    "    Lp  = -sp.Rational(1,2) * (sp.log(sp.sympify(1)-x)/x + sp.log(x)/(sp.sympify(1)-x))\n",
-    "    fp  = (sp.sympify(6)*r*r-sp.sympify(3)*M)*sp.Rational(1,8)/(M**3) + (sp.sympify(2)*r-sp.sympify(3)*M)*sp.Rational(1,4)/(M*M)*Lp\\\n",
-    "         +(sp.sympify(3)*M-12*r)*sp.Rational(1,12)/(M*M)*sp.log(r*sp.Rational(1,2)/M) + (M*M+sp.sympify(3)*M*r-sp.sympify(6)*r*r)*sp.Rational(1,3)/r\\\n",
-    "         -M*sp.Rational(1,3)/(r*r) + sp.Rational(1,2)/M - 2*r/(M*M)\n",
+    "    L = sp.sympify(0) + \\\n",
+    "        noif.coord_greater_bound(x,sp.sympify(0))*noif.coord_less_bound(x,sp.sympify(1))*nrpyDilog(x)\\\n",
+    "       +sp.Rational(1,2)*sp.log(noif.coord_greater_bound(x,sp.sympify(0))*x + noif.coord_leq_bound(x,sp.sympify(1)))\\\n",
+    "       *sp.log(noif.coord_less_bound(x,sp.sympify(1))*(sp.sympify(1)-x) + noif.coord_geq_bound(x,sp.sympify(1)))\n",
+    "    Lp  = sp.sympify(0) + noif.coord_greater_bound(x,sp.sympify(0))*noif.coord_less_bound(x,sp.sympify(1)) * -sp.Rational(1,2) *\\\n",
+    "         (sp.log(noif.coord_less_bound(x,sp.sympify(1))*(sp.sympify(1)-x) + noif.coord_geq_bound(x,sp.sympify(1)))/(x+sp.sympify(1e-100))\\\n",
+    "         +sp.log(noif.coord_greater_bound(x,sp.sympify(0))*x + noif.coord_leq_bound(x,sp.sympify(1)))/(sp.sympify(1)-x+sp.sympify(1e-100)))\n",
+    "    fp  = sp.sympify(3)*r*(r-M)*sp.Rational(1,4)/(M**3)*L + (sp.sympify(2)*r-sp.sympify(3)*M)*sp.Rational(1,4)/(M*M)*Lp\\\n",
+    "         +(sp.sympify(3)*M-12*r)*sp.Rational(1,12)/(M*M)*sp.log(r*sp.Rational(1,2)/M) + (M*M+sp.sympify(3)*M*r-sp.sympify(6)*r*r)*sp.Rational(1,12)/(r*M*M)\\\n",
+    "         -M*sp.Rational(1,3)/(r*r) + sp.Rational(1,2)/M - r/(M*M)\n",
     "    return fp\n"
    ]
   },
@@ -206,7 +221,8 @@
     "\n",
     "We will code each component as its own function to more easily apply the appropriate staggering.\n",
     "\\begin{align}\n",
-    "A_r &= -\\frac{aC}{8} \\left| \\cos \\theta \\right| \\left( 1 + \\frac{4M}{r} \\right), \\\\\n",
+    "A_r &= -\\frac{aC}{8} \\left| \\cos \\theta \\right| \\left( 1 + \\frac{4M}{r} \\right) \n",
+    "\\sqrt{1 + \\frac{2M}{r}}, \\\\\n",
     "\\end{align}"
    ]
   },
@@ -219,8 +235,8 @@
     "def Ar_SM(r,theta,phi, **params):\n",
     "    M = params[\"M\"]\n",
     "    a = params[\"a\"]\n",
-    "    # A_r = -aC/8 * cos \\theta ( 1 + 4M/r )\n",
-    "    return -a*C_SM*sp.Rational(1,8)*nrpyAbs(sp.cos(theta))*(sp.sympify(1)+sp.sympify(4)*M/r)"
+    "    # A_r = -aC/8 * cos \\theta ( 1 + 4M/r ) \\sqrt{1 + 2M/r}\n",
+    "    return -a*C_SM*sp.Rational(1,8)*nrpyAbs(sp.cos(theta))*(sp.sympify(1)+sp.sympify(4)*M/r)*sp.sqrt(sp.sympify(1)+sp.sympify(2)*M/r)"
    ]
   },
   {
@@ -262,7 +278,7 @@
     "    M = params[\"M\"]\n",
     "    a = params[\"a\"]\n",
     "    # A_\\phi = M^2 C [1-\\cos \\theta + a^2 f(r) cos \\theta sin^2 \\theta]\n",
-    "    return M*M*C_SM*(sp.sympify(2)-nrpyAbs(sp.cos(theta))+a*a*f_of_r(r,M)*sp.cos(theta)*sp.sin(theta)**2)"
+    "    return M*M*C_SM*(sp.sympify(1)-nrpyAbs(sp.cos(theta))+a*a*f_of_r(r,M)*sp.cos(theta)*sp.sin(theta)**2)"
    ]
   },
   {
@@ -303,13 +319,13 @@
     "    a = params[\"a\"]\n",
     "    alpha = params[\"alpha\"]\n",
     "    betaU = params[\"betaU\"] # Note that this must use a spherical basis!\n",
+    "    gammaDD = params[\"gammaDD\"] # Note that this must use a Cartesian basis!\n",
     "    sqrtgammaDET = params[\"sqrtgammaDET\"]\n",
     "    KerrSchild_radial_shift = params[\"KerrSchild_radial_shift\"]\n",
     "    r     = rfm.xxSph[0] + KerrSchild_radial_shift # We are setting the data up in Shifted Kerr-Schild coordinates\n",
     "    theta = rfm.xxSph[1]\n",
     "    phi   = rfm.xxSph[2]\n",
     "\n",
-    "    global BsphU\n",
     "    BsphU = ixp.zerorank1()\n",
     "    BsphU[0] = C_SM*alpha*M*M/(r*r) + \\\n",
     "               C_SM*alpha*a*a*M*M*sp.Rational(1,2)/(r**4)*(-sp.sympify(2)*sp.cos(theta) + (r/M)**2*(sp.sympify(1)+sp.sympify(3)*sp.cos(sp.sympify(2)*theta))*f_of_r(r,M))\n",
@@ -324,8 +340,6 @@
     "\n",
     "    ED = gfcf.change_basis_spherical_to_Cartesian_D(EsphD)\n",
     "    BU = gfcf.change_basis_spherical_to_Cartesian_U(BsphU)\n",
-    "    for i in range(3):\n",
-    "        print(BU[i])\n",
     "\n",
     "    return gfcf.compute_ValenciavU_from_ED_and_BU(ED, BU, gammaDD)"
    ]
@@ -355,9 +369,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-C_SM*M*a*xx2*(4*M/(r0 + sqrt(xx0**2 + xx1**2 + xx2**2)) + 1)/(8*(r0 + sqrt(xx0**2 + xx1**2 + xx2**2))**2*sqrt(2*M*(r0 + sqrt(xx0**2 + xx1**2 + xx2**2))/(a**2*xx2**2/(xx0**2 + xx1**2 + xx2**2) + (r0 + sqrt(xx0**2 + xx1**2 + xx2**2))**2) + 1)*sqrt(xx0**2 + xx1**2 + xx2**2))\n",
-      "C_SM*M*a*(4*M/(r0 + sqrt(xx0**2 + xx1**2 + xx2**2)) + 1)*sqrt(-xx2**2/(xx0**2 + xx1**2 + xx2**2) + 1)*sqrt(xx0**2 + xx1**2 + xx2**2)/(8*(r0 + sqrt(xx0**2 + xx1**2 + xx2**2))**2*sqrt(2*M*(r0 + sqrt(xx0**2 + xx1**2 + xx2**2))/(a**2*xx2**2/(xx0**2 + xx1**2 + xx2**2) + (r0 + sqrt(xx0**2 + xx1**2 + xx2**2))**2) + 1))\n",
-      "0\n",
       "ValenciavU0 is in agreement!\n",
       "AD0 is in agreement!\n",
       "ValenciavU1 is in agreement!\n",
@@ -380,19 +391,19 @@
     "                                       [sp.diff(rfm.xxSph[1],rfm.xx[0]), sp.diff(rfm.xxSph[1],rfm.xx[1]), sp.diff(rfm.xxSph[1],rfm.xx[2])],\n",
     "                                       [sp.diff(rfm.xxSph[2],rfm.xx[0]), sp.diff(rfm.xxSph[2],rfm.xx[1]), sp.diff(rfm.xxSph[2],rfm.xx[2])]])\n",
     "dx__drrefmetric_0UDmatrix = drrefmetric__dx_0UDmatrix.inv()\n",
-    "gammaDD = ixp.zerorank2()\n",
+    "gammaSphDD = ixp.zerorank2()\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
-    "        gammaDD[i][j] += sks.gammaSphDD[i][j].subs(sks.r,rfm.xxSph[0]).subs(sks.th,rfm.xxSph[1])\n",
-    "unused_gammaUU,gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
-    "sqrtgammaDET = sp.sqrt(gammaDET)\n",
+    "        gammaSphDD[i][j] += sks.gammaSphDD[i][j].subs(sks.r,rfm.xxSph[0]).subs(sks.th,rfm.xxSph[1])\n",
     "\n",
-    "gammaCartDD = ixp.zerorank2()\n",
+    "gammaDD = ixp.zerorank2()\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        for k in range(3):\n",
     "            for l in range(3):\n",
-    "                gammaCartDD[i][j] += drrefmetric__dx_0UDmatrix[(k,i)]*drrefmetric__dx_0UDmatrix[(l,j)]*gammaDD[k][l]\n",
+    "                gammaDD[i][j] += drrefmetric__dx_0UDmatrix[(k,i)]*drrefmetric__dx_0UDmatrix[(l,j)]*gammaSphDD[k][l]\n",
+    "unused_gammaUU,gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
+    "sqrtgammaDET = sp.sqrt(gammaDET)\n",
     "\n",
     "betaU = ixp.zerorank1()\n",
     "for i in range(3):\n",
@@ -400,8 +411,8 @@
     "alpha = sks.alphaSph.subs(sks.r,rfm.xxSph[0]).subs(sks.th,rfm.xxSph[1])\n",
     "\n",
     "A_smD = gfcf.Axyz_func_spherical(Ar_SM,Ath_SM,Aph_SM,stagger_enable = True,M=sks.M,a=sks.a,KerrSchild_radial_shift=sks.r0)\n",
-    "Valenciav_smD = ValenciavU_func_SM(M=sks.M,a=sks.a,KerrSchild_radial_shift=sks.r0,alpha=alpha,betaU=betaU,gammaDD=gammaCartDD,sqrtgammaDET=sqrtgammaDET)\n",
-    "gf.GiRaFFEfood_NRPy_generate_initial_data(ID_type = \"SplitMonopole\", stagger_enable = True,M=sks.M,a=sks.a,KerrSchild_radial_shift=sks.r0,alpha=alpha,betaU=betaU,gammaDD=gammaCartDD,sqrtgammaDET=sqrtgammaDET)\n",
+    "Valenciav_smD = ValenciavU_func_SM(M=sks.M,a=sks.a,KerrSchild_radial_shift=sks.r0,alpha=alpha,betaU=betaU,gammaDD=gammaDD,sqrtgammaDET=sqrtgammaDET)\n",
+    "gf.GiRaFFEfood_NRPy_generate_initial_data(ID_type = \"SplitMonopole\", stagger_enable = True,M=sks.M,a=sks.a,KerrSchild_radial_shift=sks.r0,alpha=alpha,betaU=betaU,gammaDD=gammaDD,sqrtgammaDET=sqrtgammaDET)\n",
     "\n",
     "def consistency_check(quantity1,quantity2,string):\n",
     "    if quantity1-quantity2==0:\n",
