--- a/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
@@ -372,7 +372,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The algorithm will start by reading in all the quantities it will need and storing them as temporary variables. This includes all three components of the vector potential in two different directions each, reflecting the derivatives we will need to take. Five points are needed in each direction in order to fill the templates for fourth- and second-order centered-differencing and first-order forward- and backward-differencing. We calculate the inverse of the square root of the metric determinant and then compute all three components of the magnetic field at all orders. Then, if the relative differences between orders are found to be high, the order is dropped. The final result is written to memory."
+    "The algorithm will start by reading in all the quantities it will need and storing them as temporary variables. This includes all three components of the vector potential in two different directions each, reflecting the derivatives we will need to take. Five points are needed in each direction in order to fill the templates for fourth- and second-order centered-differencing and first-order forward- and backward-differencing. We calculate the inverse of the square root of the metric determinant and then compute all three components of the magnetic field at all orders. Then, if the relative differences between orders are found to be high, the order is dropped. The final result is written to memory.\n",
+    "\n",
+    "***This is currently not used, it does not reliably improve shock handling***"
    ]
   },
   {
@@ -453,14 +455,14 @@
    "outputs": [],
    "source": [
     "desc=\"Compute the magnetic field from the vector potential everywhere, including ghostzones\"\n",
+    "#     body     = order_lowering_body,\n",
     "name=\"driver_A_to_B\"\n",
-    "#     body     = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
-    "#                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "#                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])]).replace(\"IDX4\",\"IDX4S\"),\n",
     "driver_Ccode = outCfunction(\n",
     "    outfile  = \"returnstring\", desc=desc, name=name,\n",
     "    params   = \"const paramstruct *restrict params,REAL *restrict in_gfs,REAL *restrict auxevol_gfs\",\n",
-    "    body     = order_lowering_body,\n",
+    "    body     = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
+    "                                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
+    "                                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])]).replace(\"IDX4\",\"IDX4S\"),\n",
     "    postloop = \"\"\"\n",
     "    int imin[3] = { NGHOSTS_A2B, NGHOSTS_A2B, NGHOSTS_A2B };\n",
     "    int imax[3] = { NGHOSTS+Nxx0, NGHOSTS+Nxx1, NGHOSTS+Nxx2 };\n",
@@ -568,7 +570,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+      "Created Tutorial-GiRaFFE_NRPy-A2B.tex, and compiled LaTeX file to PDF file\n",
+      "    Tutorial-GiRaFFE_NRPy-A2B.pdf\n"
      ]
     }
    ],
