--- a/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Writing GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -322,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -488,7 +488,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_NRPy\\GiRaFFE_Ccode_validation\\boundary_conditions/GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_NRPy/GiRaFFE_Ccode_validation/boundary_conditions/GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
@@ -649,7 +649,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+      "Created Tutorial-GiRaFFE_NRPy-BCs.tex, and compiled LaTeX file to PDF file\n",
+      "    Tutorial-GiRaFFE_NRPy-BCs.pdf\n"
      ]
     }
    ],
@@ -675,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
