--- a/in_progress/Tutorial-GiRaFFE_NRPy-Characteristic_Speeds.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Characteristic_Speeds.ipynb
@@ -391,70 +391,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] ERROR | Error while converting 'Tutorial-GiRaFFE_NRPy-Characteristic_Speeds.ipynb'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/nbconvertapp.py\", line 418, in export_single_notebook\n",
-      "    output, resources = self.exporter.from_filename(notebook_filename, resources=resources)\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/exporters/exporter.py\", line 181, in from_filename\n",
-      "    return self.from_file(f, resources=resources, **kw)\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/exporters/exporter.py\", line 199, in from_file\n",
-      "    return self.from_notebook_node(nbformat.read(file_stream, as_version=4), resources=resources, **kw)\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/exporters/latex.py\", line 77, in from_notebook_node\n",
-      "    return super().from_notebook_node(nb, resources, **kw)\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/exporters/templateexporter.py\", line 384, in from_notebook_node\n",
-      "    output = self.template.render(nb=nb_copy, resources=resources)\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/jinja2/environment.py\", line 1090, in render\n",
-      "    self.environment.handle_exception()\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/jinja2/environment.py\", line 832, in handle_exception\n",
-      "    reraise(*rewrite_traceback_stack(source=source))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/jinja2/_compat.py\", line 28, in reraise\n",
-      "    raise value.with_traceback(tb)\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/index.tex.j2\", line 8, in top-level template code\n",
-      "    ((* extends cell_style *))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/style_jupyter.tex.j2\", line 176, in top-level template code\n",
-      "    \\prompt{(((prompt)))}{(((prompt_color)))}{(((execution_count)))}{(((extra_space)))}\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/base.tex.j2\", line 7, in top-level template code\n",
-      "    ((*- extends 'document_contents.tex.j2' -*))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/document_contents.tex.j2\", line 51, in top-level template code\n",
-      "    ((*- block figure scoped -*))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/display_priority.j2\", line 5, in top-level template code\n",
-      "    ((*- extends 'null.j2' -*))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/null.j2\", line 30, in top-level template code\n",
-      "    ((*- block body -*))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/base.tex.j2\", line 206, in block \"body\"\n",
-      "    ((( super() )))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/null.j2\", line 32, in block \"body\"\n",
-      "    ((*- block any_cell scoped -*))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/null.j2\", line 85, in block \"any_cell\"\n",
-      "    ((*- block markdowncell scoped-*)) ((*- endblock markdowncell -*))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/share/jupyter/nbconvert/templates/latex/document_contents.tex.j2\", line 68, in block \"markdowncell\"\n",
-      "    ((( cell.source | citation2latex | strip_files_prefix | convert_pandoc('markdown+tex_math_double_backslash', 'json',extra_args=[]) | resolve_references | convert_pandoc('json','latex'))))\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/filters/pandoc.py\", line 24, in convert_pandoc\n",
-      "    return pandoc(source, from_format, to_format, extra_args=extra_args)\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/utils/pandoc.py\", line 52, in pandoc\n",
-      "    check_pandoc_version()\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/utils/pandoc.py\", line 100, in check_pandoc_version\n",
-      "    v = get_pandoc_version()\n",
-      "  File \"/home/penelson/nrpyvirtualenv/lib/python3.8/site-packages/nbconvert/utils/pandoc.py\", line 77, in get_pandoc_version\n",
-      "    raise PandocMissing()\n",
-      "nbconvert.utils.pandoc.PandocMissing: Pandoc wasn't found.\n",
-      "Please check that pandoc is installed:\n",
-      "https://pandoc.org/installing.html\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'pdflatex'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-2cc4dcfe5a63>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcmdline_helper\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcmd\u001b[0m    \u001b[0;31m# NRPy+: Multi-platform Python command-line interface\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_Jupyter_notebook_to_LaTeXed_PDF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Tutorial-GiRaFFE_NRPy-Characteristic_Speeds\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlocation_of_template_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"..\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/nrpyvirtualenv/nrpytutorial/cmdline_helper.py\u001b[0m in \u001b[0;36moutput_Jupyter_notebook_to_LaTeXed_PDF\u001b[0;34m(notebookname, location_of_template_file, verbose)\u001b[0m\n\u001b[1;32m    194\u001b[0m                          +r\" --log-level='WARN' \"+notebookname+\".ipynb\",verbose=False)\n\u001b[1;32m    195\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0m_i\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# _i is an unused variable.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 196\u001b[0;31m         \u001b[0mExecute_input_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"pdflatex -interaction=batchmode \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mnotebookname\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".tex\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    197\u001b[0m     \u001b[0mdelete_existing_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotebookname\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".out \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mnotebookname\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".aux \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mnotebookname\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".log\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/nrpyvirtualenv/nrpytutorial/cmdline_helper.py\u001b[0m in \u001b[0;36mExecute_input_string\u001b[0;34m(input_string, file_to_redirect_stdout, verbose)\u001b[0m\n\u001b[1;32m    161\u001b[0m     \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"tmp.txt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwriter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbuffering\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_to_redirect_stdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mrdirect\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 163\u001b[0;31m         \u001b[0mprocess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrdirect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwriter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    164\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m             \u001b[0;31m# https://stackoverflow.com/questions/21689365/python-3-typeerror-must-be-str-not-bytes-with-sys-stdout-write/21689447\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, encoding, errors, text)\u001b[0m\n\u001b[1;32m    852\u001b[0m                             encoding=encoding, errors=errors)\n\u001b[1;32m    853\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 854\u001b[0;31m             self._execute_child(args, executable, preexec_fn, close_fds,\n\u001b[0m\u001b[1;32m    855\u001b[0m                                 \u001b[0mpass_fds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcwd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    856\u001b[0m                                 \u001b[0mstartupinfo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreationflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshell\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36m_execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, start_new_session)\u001b[0m\n\u001b[1;32m   1700\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0merrno_num\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1701\u001b[0m                         \u001b[0merr_msg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrerror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1702\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1703\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr_msg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1704\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'pdflatex'"
+      "Created Tutorial-GiRaFFE_NRPy-Characteristic_Speeds.tex, and compiled LaTeX\n",
+      "    file to PDF file Tutorial-GiRaFFE_NRPy-Characteristic_Speeds.pdf\n"
      ]
     }
    ],
