--- a/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
@@ -820,7 +820,16 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-GiRaFFE_NRPy-PPM.tex, and compiled LaTeX file to PDF file\n",
+      "    Tutorial-GiRaFFE_NRPy-PPM.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-PPM\",location_of_template_file=os.path.join(\"..\"))"
@@ -843,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
