Tutorial-BSSN_quantities.ipynb: fix documentation typo found by Terrence Pierre Jacques

--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -1207,7 +1207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For `cf`$=W=e^{-4\\phi}$, we have\n",
+    "For `cf`$=\\chi=e^{-4\\phi}$, we have\n",
     "\n",
     "* $\\phi_{,i} = -\\text{cf}_{,i} / (4 \\text{cf})$\n",
     "* $\\phi_{,ij} = (-\\text{cf}_{,ij} + \\text{cf}_{,i}\\text{cf}_{,j}/\\text{cf}) / (4 \\text{cf})$\n",
@@ -1508,7 +1508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
