Tutorial-ADM_Initial_Data-ScalarField.ipynb: fixed issues with the output directory.

--- a/Tutorial-ADM_Initial_Data-ScalarField.ipynb
+++ b/Tutorial-ADM_Initial_Data-ScalarField.ipynb
@@ -119,9 +119,9 @@
     "import sympy as sp\n",
     "import cmdline_helper as cmd\n",
     "\n",
-    "outdir = \"ScalarFieldID_validation\"\n",
-    "shutil.rmtree(outdir, ignore_errors=True)\n",
-    "cmd.mkdir(outdir)\n",
+    "Ccodesdir = \"ScalarFieldID_validation\"\n",
+    "shutil.rmtree(Ccodesdir, ignore_errors=True)\n",
+    "cmd.mkdir(Ccodesdir)\n",
     "\n",
     "###################################################################\n",
     "# Part A.1: Setting up the initial condition for the scalar field #\n",
@@ -741,7 +741,7 @@
     "ax4.plot(r,chi,'c-')\n",
     "ax4.grid()\n",
     "\n",
-    "outfile = os.path.join(outdir,\"cfs_scalarfield_id.png\")\n",
+    "outfile = os.path.join(Ccodesdir,\"cfs_scalarfield_id.png\")\n",
     "plt.savefig(outfile)\n",
     "plt.close(f)\n",
     "\n",
@@ -837,20 +837,17 @@
     "# Check to see which version of Python is being used\n",
     "# For a machine running the final release of Python 3.7.1,\n",
     "# sys.version_info should return the tuple [3,7,1,'final',0]\n",
-    "import os,sys,shutil         # Standard Python modules for multiplatform OS-level functions\n",
-    "import cmdline_helper as cmd # NRPy+: Multi-platform Python command-line interface\n",
-    "\n",
     "if sys.version_info[0] == 3:\n",
-    "    np.savetxt(os.path.join(outdir,\"outputSFID_unity_lapse.txt\"), list(zip( r, ID_sf, psi**4, alpha_unity )),\n",
+    "    np.savetxt(os.path.join(Ccodesdir,\"outputSFID_unity_lapse.txt\"), list(zip( r, ID_sf, psi**4, alpha_unity )),\n",
     "               fmt=\"%.15e\")\n",
-    "    np.savetxt(os.path.join(outdir,\"outputSFID_precollapsed_lapse.txt\"), list(zip( r, ID_sf, psi**4, alpha_precollapsed )),\n",
+    "    np.savetxt(os.path.join(Ccodesdir,\"outputSFID_precollapsed_lapse.txt\"), list(zip( r, ID_sf, psi**4, alpha_precollapsed )),\n",
     "               fmt=\"%.15e\")\n",
     "\n",
     "\n",
     "elif sys.version_info[0] == 2:\n",
-    "    np.savetxt(os.path.join(outdir,\"outputSFID_unity_lapse.txt\"), zip( r, ID_sf, psi**4, alpha_unity ),\n",
+    "    np.savetxt(os.path.join(Ccodesdir,\"outputSFID_unity_lapse.txt\"), zip( r, ID_sf, psi**4, alpha_unity ),\n",
     "               fmt=\"%.15e\")\n",
-    "    np.savetxt(os.path.join(outdir,\"outputSFID_precollapsed_lapse.txt\"), zip( r, ID_sf, psi**4, alpha_precollapsed ),\n",
+    "    np.savetxt(os.path.join(Ccodesdir,\"outputSFID_precollapsed_lapse.txt\"), zip( r, ID_sf, psi**4, alpha_precollapsed ),\n",
     "               fmt=\"%.15e\")"
    ]
   },
@@ -879,7 +876,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(os.path.join(outdir,\"ID_scalar_field_ADM_quantities-validation.h\"), \"w\") as file:\n",
+    "with open(os.path.join(Ccodesdir,\"ID_scalar_field_ADM_quantities-validation.h\"), \"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "// This function takes as input either (x,y,z) or (r,th,ph) and outputs\n",
     "//   all ADM quantities in the Cartesian or Spherical basis, respectively.\n",
@@ -931,7 +928,7 @@
     "      *BU0 = 0.0; *BU1 = 0.0; *BU2 = 0.0;\n",
     "}\\n\"\"\")\n",
     "\n",
-    "with open(os.path.join(outdir,\"ID_scalar_field_spherical-validation.h\"), \"w\") as file:\n",
+    "with open(os.path.join(Ccodesdir,\"ID_scalar_field_spherical-validation.h\"), \"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "    void ID_scalarfield_spherical(\n",
     "                     const REAL xyz_or_rthph[3],\n",
@@ -1044,7 +1041,7 @@
     "    print(\"Error: Can only convert scalar field Spherical initial data to BSSN Curvilinear coords.\")\n",
     "    exit(1)\n",
     "\n",
-    "with open(os.path.join(outdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), \"w\") as file:\n",
+    "with open(os.path.join(Ccodesdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), \"w\") as file:\n",
     "    file.write(\"void ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2(const paramstruct *restrict params,const REAL xx0xx1xx2[3],\")\n",
     "    if pointer_to_ID_inputs == True:\n",
     "        file.write(\"ID_inputs *other_inputs,\")\n",
@@ -1061,17 +1058,17 @@
     "      REAL xyz_or_rthph[3];\\n\"\"\")\n",
     "outCparams = \"preindent=1,outCfileaccess=a,outCverbose=False,includebraces=False\"\n",
     "outputC(r_th_ph_or_Cart_xyz_oID_xx[0:3], [\"xyz_or_rthph[0]\", \"xyz_or_rthph[1]\", \"xyz_or_rthph[2]\"],\n",
-    "        os.path.join(outdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), outCparams + \",CSE_enable=False\")\n",
+    "        os.path.join(Ccodesdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), outCparams + \",CSE_enable=False\")\n",
     "\n",
-    "with open(os.path.join(outdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), \"a\") as file:\n",
+    "with open(os.path.join(Ccodesdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), \"a\") as file:\n",
     "    file.write(\"\"\"ID_scalarfield_spherical(xyz_or_rthph, other_inputs,\n",
     "                      &sfSphorCart, &sfMSphorCart);\n",
     "        // Next compute all rescaled BSSN curvilinear quantities:\\n\"\"\")\n",
     "outCparams = \"preindent=1,outCfileaccess=a,outCverbose=False,includebraces=False\"\n",
     "outputC([sfSphorCart, sfMSphorCart], [\"*sf\", \"*sfM\"],\n",
-    "        os.path.join(outdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), params=outCparams)\n",
+    "        os.path.join(Ccodesdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), params=outCparams)\n",
     "\n",
-    "with open(os.path.join(outdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), \"a\") as file:\n",
+    "with open(os.path.join(Ccodesdir,\"ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h\"), \"a\") as file:\n",
     "    file.write(\"}\\n\")"
    ]
   },
@@ -1098,7 +1095,7 @@
     "import loop as lp\n",
     "\n",
     "# Driver\n",
-    "with open(os.path.join(outdir,\"ID_scalarfield-validation.h\"), \"w\") as file:\n",
+    "with open(os.path.join(Ccodesdir,\"ID_scalarfield-validation.h\"), \"w\") as file:\n",
     "    file.write(\"\"\"void ID_scalarfield(const paramstruct *restrict params,REAL *restrict xx[3],\n",
     "                                          ID_inputs other_inputs,REAL *restrict in_gfs) {\n",
     "#include \\\"set_Cparameters.h\\\"\\n\"\"\")\n",
@@ -1186,14 +1183,14 @@
     "import ScalarField.ScalarField_InitialData as sfid\n",
     "\n",
     "# Output the unity lapse initial data file\n",
-    "outputname = os.path.join(outdir,\"outputSFID_unity_lapse-validation.txt\")\n",
-    "sfid.ScalarField_InitialData(outputname, outdir,ID_Family,\n",
+    "outputname = os.path.join(Ccodesdir,\"outputSFID_unity_lapse-validation.txt\")\n",
+    "sfid.ScalarField_InitialData(outputname, Ccodesdir,ID_Family,\n",
     "                             phi0,r0,sigma,NR,RMAX,lapse_condition=\"Unity\",\n",
     "                             CoordSystem=CoordSystem,sinhA=sinhA,sinhW=sinhW)\n",
     "\n",
     "# Output the \"pre-collapsed\" lapse initial data file\n",
-    "outputname = os.path.join(outdir,\"outputSFID_precollapsed_lapse-validation.txt\")\n",
-    "sfid.ScalarField_InitialData(outputname, outdir,ID_Family,\n",
+    "outputname = os.path.join(Ccodesdir,\"outputSFID_precollapsed_lapse-validation.txt\")\n",
+    "sfid.ScalarField_InitialData(outputname, Ccodesdir,ID_Family,\n",
     "                             phi0,r0,sigma,NR,RMAX,lapse_condition=\"Pre-collapsed\",\n",
     "                             CoordSystem=CoordSystem,sinhA=sinhA,sinhW=sinhW)"
    ]
@@ -1226,43 +1223,43 @@
    "source": [
     "import filecmp\n",
     "\n",
-    "if filecmp.cmp(os.path.join(outdir,'outputSFID_unity_lapse.txt'),\n",
-    "               os.path.join(outdir,'outputSFID_unity_lapse-validation.txt')) == False:\n",
+    "if filecmp.cmp(os.path.join(Ccodesdir,'outputSFID_unity_lapse.txt'),\n",
+    "               os.path.join(Ccodesdir,'outputSFID_unity_lapse-validation.txt')) == False:\n",
     "    print(\"ERROR: Unity lapse initial data test FAILED!\")\n",
     "    exit(1)\n",
     "else:\n",
     "    print(\"             Unity lapse initial data test: PASSED!\")\n",
     "\n",
-    "if filecmp.cmp(os.path.join(outdir,'outputSFID_precollapsed_lapse.txt'),\n",
-    "               os.path.join(outdir,'outputSFID_precollapsed_lapse-validation.txt')) == False:\n",
+    "if filecmp.cmp(os.path.join(Ccodesdir,'outputSFID_precollapsed_lapse.txt'),\n",
+    "               os.path.join(Ccodesdir,'outputSFID_precollapsed_lapse-validation.txt')) == False:\n",
     "    print(\"ERROR: \\\"Pre-collapsed\\\" lapse initial data test FAILED!\")\n",
     "    exit(1)\n",
     "else:\n",
     "    print(\"   \\\"Pre-collapsed\\\" lapse initial data test: PASSED!\")\n",
     "\n",
-    "if filecmp.cmp(os.path.join(outdir,'ID_scalar_field_ADM_quantities.h'),\n",
-    "               os.path.join(outdir,'ID_scalar_field_ADM_quantities-validation.h')) == False:\n",
+    "if filecmp.cmp(os.path.join(Ccodesdir,'ID_scalar_field_ADM_quantities.h'),\n",
+    "               os.path.join(Ccodesdir,'ID_scalar_field_ADM_quantities-validation.h')) == False:\n",
     "    print(\"ERROR: ADM quantities interpolation file test FAILED!\")\n",
     "    exit(1)\n",
     "else:\n",
     "    print(\"    ADM quantities interpolation file test: PASSED!\")\n",
     "\n",
-    "if filecmp.cmp(os.path.join(outdir,'ID_scalar_field_spherical.h'),\n",
-    "               os.path.join(outdir,'ID_scalar_field_spherical-validation.h')) == False:\n",
+    "if filecmp.cmp(os.path.join(Ccodesdir,'ID_scalar_field_spherical.h'),\n",
+    "               os.path.join(Ccodesdir,'ID_scalar_field_spherical-validation.h')) == False:\n",
     "    print(\"ERROR: Scalar field interpolation file test FAILED!\")\n",
     "    exit(1)\n",
     "else:\n",
     "    print(\"      Scalar field interpolation file test: PASSED!\")\n",
     "\n",
-    "if filecmp.cmp(os.path.join(outdir,'ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2.h'),\n",
-    "               os.path.join(outdir,'ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h')) == False:\n",
+    "if filecmp.cmp(os.path.join(Ccodesdir,'ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2.h'),\n",
+    "               os.path.join(Ccodesdir,'ID_scalarfield_xx0xx1xx2_to_BSSN_xx0xx1xx2-validation.h')) == False:\n",
     "    print(\"ERROR: Scalar field Spherical to Curvilinear test FAILED!\")\n",
     "    exit(1)\n",
     "else:\n",
     "    print(\"Scalar field Spherical to Curvilinear test: PASSED!\")\n",
     "\n",
-    "if filecmp.cmp(os.path.join(outdir,'ID_scalarfield.h'),\n",
-    "               os.path.join(outdir,'ID_scalarfield-validation.h')) == False:\n",
+    "if filecmp.cmp(os.path.join(Ccodesdir,'ID_scalarfield.h'),\n",
+    "               os.path.join(Ccodesdir,'ID_scalarfield-validation.h')) == False:\n",
     "    print(\"ERROR: Scalar field driver test: FAILED!\")\n",
     "    exit(1)\n",
     "else:\n",
@@ -1284,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-15T10:05:10.862225Z",
@@ -1293,7 +1290,16 @@
      "shell.execute_reply": "2021-06-15T10:05:13.918792Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-ADM_Initial_Data-ScalarField.tex, and compiled LaTeX file\n",
+      "    to PDF file Tutorial-ADM_Initial_Data-ScalarField.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-ADM_Initial_Data-ScalarField\")"
