in_progress/Tutorial-Start_to_Finish_UnitTest-ShiftedKerrSchild.ipynb: malloc the gridfunctions

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-ShiftedKerrSchild.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-ShiftedKerrSchild.ipynb
@@ -376,7 +376,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Validation//ShiftedKerrSchild_unit_test.C\n"
+      "Overwriting Validation//ShiftedKerrSchild_unit_test.C\n"
      ]
     }
    ],
@@ -430,20 +430,51 @@
     "\n",
     "// More definitions to interface with ETK code:\n",
     "const int cctk_lsh[3] = {11,11,11};\n",
-    "const int grid_size = cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2];\n",
-    "CCTK_REAL x[grid_size];\n",
-    "CCTK_REAL y[grid_size];\n",
-    "CCTK_REAL z[grid_size];\n",
-    "CCTK_REAL r[grid_size];\n",
-    "CCTK_REAL SKSgrr[grid_size];\n",
-    "CCTK_REAL SKSgrth[grid_size];\n",
-    "CCTK_REAL SKSgrph[grid_size];\n",
-    "CCTK_REAL SKSgthth[grid_size];\n",
-    "CCTK_REAL SKSgthph[grid_size];\n",
-    "CCTK_REAL SKSgphph[grid_size];\n",
-    "CCTK_REAL SKSbetar[grid_size];\n",
-    "CCTK_REAL SKSbetath[grid_size];\n",
-    "CCTK_REAL SKSbetaph[grid_size];\n",
+    "const int grid_size = cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:18:17.914077Z",
+     "iopub.status.busy": "2020-12-17T02:18:17.913627Z",
+     "iopub.status.idle": "2020-12-17T02:18:17.916218Z",
+     "shell.execute_reply": "2020-12-17T02:18:17.915841Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "gfs_list = ['x','y','z','r','SKSgrr','SKSgrth','SKSgrph','SKSgthth','SKSgthph','SKSgphph','SKSbetar','SKSbetath','SKSbetaph']\n",
+    "with open(os.path.join(out_dir,\"ShiftedKerrSchild_unit_test.C\"), 'a') as file:\n",
+    "    for gf in gfs_list:\n",
+    "        file.write(\"CCTK_REAL *\"+gf+\" = (CCTK_REAL *)malloc(sizeof(CCTK_REAL)*grid_size);\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:18:17.914077Z",
+     "iopub.status.busy": "2020-12-17T02:18:17.913627Z",
+     "iopub.status.idle": "2020-12-17T02:18:17.916218Z",
+     "shell.execute_reply": "2020-12-17T02:18:17.915841Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to Validation//ShiftedKerrSchild_unit_test.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $out_dir/ShiftedKerrSchild_unit_test.C\n",
     "CCTK_REAL *alp;\n",
     "CCTK_REAL *betax;\n",
     "CCTK_REAL *betay;\n",
@@ -574,7 +605,42 @@
     "        }\n",
     "    }\n",
     "\n",
-    "    if(all_agree) printf(\"All quantities agree at all points!\\n\");\n",
+    "    if(all_agree) printf(\"All quantities agree at all points!\\n\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(out_dir,\"ShiftedKerrSchild_unit_test.C\"), 'a') as file:\n",
+    "    for gf in gfs_list:\n",
+    "        file.write(\"    free(\"+gf+\");\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-17T02:18:17.914077Z",
+     "iopub.status.busy": "2020-12-17T02:18:17.913627Z",
+     "iopub.status.idle": "2020-12-17T02:18:17.916218Z",
+     "shell.execute_reply": "2020-12-17T02:18:17.915841Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to Validation//ShiftedKerrSchild_unit_test.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $out_dir/ShiftedKerrSchild_unit_test.C\n",
     "    free(auxevol_gfs);\n",
     "    free(auxevol_ETK_gfs);\n",
     "}"
@@ -595,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-17T02:18:17.923286Z",
@@ -612,11 +678,11 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 0.2939422130584717 seconds.\n",
+      "Finished in 0.3594996929168701 seconds.\n",
       "\n",
       "\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ShiftedKerrSchild_unit_test `...\n",
-      "(BENCH): Finished executing in 0.2082805633544922 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7 ./ShiftedKerrSchild_unit_test `...\n",
+      "(BENCH): Finished executing in 0.2101430892944336 seconds.\n"
      ]
     }
    ],
@@ -648,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-17T02:18:18.445140Z",
@@ -690,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-17T02:18:18.451383Z",
@@ -704,6 +770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[NbConvertApp] WARNING | pattern 'Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb' matched no files\n",
       "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.tex, and\n",
       "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
       "    GiRaFFEfood_NRPy.pdf\n"
@@ -718,7 +785,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
