Changed unit test outputs to be placed into one folder

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb
@@ -17,6 +17,8 @@
     "\n",
     "## Author: Patrick Nelson\n",
     "\n",
+    "#### Edits by Terrence Pierre Jacques\n",
+    "\n",
     "## This module Validates the Boundary Conditions routines for `GiRaFFE_NRPy`.\n",
     "\n",
     "**Notebook Status:** <font color='green'><b>Validated</b></font>\n",
@@ -24,13 +26,13 @@
     "**Validation Notes:** This module will validate the routines in [Tutorial-GiRaFFE_NRPy-BCs](Tutorial-GiRaFFE_NRPy-BCs.ipynb).\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
-    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-BCs.ipynb) Generates the driver to compute the magnetic field from the vector potential in arbitrary spactimes.\n",
+    "* [GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-BCs.ipynb) Generates the driver apply boundary conditions to the vector potential and velocity.\n",
     "\n",
     "## Introduction:\n",
     "\n",
-    "This notebook validates the code that will interpolate the metric gridfunctions on cell faces. These values, along with the reconstruction of primitive variables on the faces, are necessary for the Riemann solvers to compute the fluxes through the cell faces.\n",
+    "This notebook validates the C code used to apply boundary conditions to components of the vector potential and valencia velocity.\n",
     "\n",
-    "It is, in general, good coding practice to unit test functions individually to verify that they produce the expected and intended output. We will generate test data with arbitrarily-chosen analytic functions and calculate gridfunctions at the cell centers on a small numeric grid. We will then compute the values on the cell faces in two ways: first, with our interpolator, then second, we will shift the grid and compute them analytically. Then, we will rerun the function at a finer resolution. Finally, we will compare the results of the two runs to show third-order convergence.\n",
+    "It is, in general, good coding practice to unit test functions individually to verify that they produce the expected and intended output. We will generate test data with arbitrarily-chosen analytic functions and calculate gridfunctions at the cell centers on a small numeric grid. We will then compute the values for the ghost zones in two ways: first with the boundary condition C code driver, then we compute them analytically.\n",
     "\n",
     "When this notebook is run, the significant digits of agreement between the approximate and exact values in the ghost zones will be evaluated. If the agreement falls below a thresold, the point, quantity, and level of agreement are reported [here](#compile_run)."
    ]
@@ -81,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "import os, sys           # Standard Python modules for multiplatform OS-level functions\n",
+    "import os, sys, shutil         # Standard Python modules for multiplatform OS-level functions\n",
     "# First, we'll add the parent directory to the list of directories Python will check for modules.\n",
     "nrpy_dir_path = os.path.join(\"..\")\n",
     "if nrpy_dir_path not in sys.path:\n",
@@ -99,8 +101,16 @@
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "\n",
-    "out_dir = \"Validation/\"\n",
-    "cmd.mkdir(out_dir)\n",
+    "Ccodesdir = \"Start-to-Finish-UnitTests/BCs_UnitTest/\"\n",
+    "\n",
+    "# First remove C code output directory if it exists\n",
+    "# Courtesy https://stackoverflow.com/questions/303200/how-do-i-remove-delete-a-folder-that-is-not-empty\n",
+    "shutil.rmtree(Ccodesdir, ignore_errors=True)\n",
+    "# Then create a fresh directory\n",
+    "cmd.mkdir(Ccodesdir)\n",
+    "\n",
+    "outdir = os.path.join(Ccodesdir,\"output/\")\n",
+    "cmd.mkdir(outdir)\n",
     "\n",
     "thismodule = \"Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs\"\n",
     "\n",
@@ -195,8 +205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_test_data() to file Validation/calculate_test_data.h\n",
-      "Output C function calculate_test_data_exact() to file Validation/calculate_test_data_exact.h\n"
+      "Output C function calculate_test_data() to file Start-to-Finish-UnitTests/BCs_UnitTest/calculate_test_data.h\n",
+      "Output C function calculate_test_data_exact() to file Start-to-Finish-UnitTests/BCs_UnitTest/calculate_test_data_exact.h\n"
      ]
     }
    ],
@@ -214,7 +224,7 @@
     "desc = \"Calculate test data on the interior grid for boundary conditions\"\n",
     "name = \"calculate_test_data\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *restrict params,REAL *restrict xx[3],REAL *restrict auxevol_gfs,REAL *restrict evol_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",metric_gfs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts=\"InteriorPoints,Read_xxs\")\n",
@@ -222,13 +232,13 @@
     "desc = \"Calculate test data at all points for comparison\"\n",
     "name = \"calculate_test_data_exact\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *restrict params,REAL *restrict xx[3],REAL *restrict auxevol_gfs,REAL *restrict evol_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",metric_gfs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts=\"AllPoints,Read_xxs\")\n",
     "\n",
     "import GiRaFFE_NRPy.GiRaFFE_NRPy_BCs as BC\n",
-    "BC.GiRaFFE_NRPy_BCs(os.path.join(out_dir,\"boundary_conditions\"))\n"
+    "BC.GiRaFFE_NRPy_BCs(os.path.join(Ccodesdir,\"boundary_conditions\"))\n"
    ]
   },
   {
@@ -260,7 +270,7 @@
     "# par.generate_Cparameters_Ccodes(os.path.join(out_dir))\n",
     "\n",
     "# Step 3.d.ii: Set free_parameters.h\n",
-    "with open(os.path.join(out_dir,\"free_parameters.h\"),\"w\") as file:\n",
+    "with open(os.path.join(Ccodesdir,\"free_parameters.h\"),\"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "// Override parameter defaults with values based on command line arguments and NGHOSTS.\n",
     "params.Nxx0 = atoi(argv[1]);\n",
@@ -283,7 +293,7 @@
     "\\n\"\"\")\n",
     "\n",
     "# Generates declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
-    "par.generate_Cparameters_Ccodes(os.path.join(out_dir))"
+    "par.generate_Cparameters_Ccodes(os.path.join(Ccodesdir))"
    ]
   },
   {
@@ -294,7 +304,8 @@
     "\n",
     "# Step 2: `BCs_unit_test.c`: The Main C Code \\[Back to [top](#toc)\\]\n",
     "$$\\label{mainc}$$\n",
-    "\n"
+    "\n",
+    "Here we compare the results of our boundary conditions, `apply_bcs_potential()` and `apply_bcs_velocity()`, against the exact results, looping over the entire numerical grid."
    ]
   },
   {
@@ -313,12 +324,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Validation//BCs_unit_test.c\n"
+      "Writing Start-to-Finish-UnitTests/BCs_UnitTest//BCs_unit_test.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile $out_dir/BCs_unit_test.c\n",
+    "%%writefile $Ccodesdir/BCs_unit_test.c\n",
     "\n",
     "// These are common packages that we are likely to need.\n",
     "#include \"stdio.h\"\n",
@@ -506,17 +517,17 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/BCs_unit_test.c -o Validation/BCs_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 0.4094369411468506 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Start-to-Finish-UnitTests/BCs_UnitTest/BCs_unit_test.c -o Start-to-Finish-UnitTests/BCs_UnitTest/output/BCs_unit_test -lm`...\n",
+      "(BENCH): Finished executing in 0.6085014343261719 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.4185829162597656 seconds.\n",
+      "Finished in 0.6146230697631836 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/BCs_unit_test 2 2 2`...\n",
-      "(BENCH): Finished executing in 0.20866155624389648 seconds.\n",
-      "Finished in 0.2214832305908203 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5 ./BCs_unit_test 2 2 2`...\n",
+      "(BENCH): Finished executing in 0.21192646026611328 seconds.\n",
+      "Finished in 0.2279961109161377 seconds.\n",
       "\n",
       "\n"
      ]
@@ -529,13 +540,16 @@
     "\n",
     "print(\"Now compiling, should take ~2 seconds...\\n\")\n",
     "start = time.time()\n",
-    "cmd.C_compile(os.path.join(out_dir,\"BCs_unit_test.c\"), os.path.join(out_dir,\"BCs_unit_test\"))\n",
+    "cmd.C_compile(os.path.join(Ccodesdir,\"BCs_unit_test.c\"), os.path.join(outdir,\"BCs_unit_test\"))\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
+    "# Change to output directory\n",
+    "os.chdir(outdir)\n",
+    "\n",
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
-    "cmd.Execute(os.path.join(\"Validation\",\"BCs_unit_test\"),\"2 2 2\",file_to_redirect_stdout=os.path.join(out_dir,results_file))\n",
+    "cmd.Execute(os.path.join(\"BCs_unit_test\"),\"2 2 2\",file_to_redirect_stdout=results_file)\n",
     "# To do a convergence test, we'll also need a second grid with twice the resolution.\n",
     "# cmd.Execute(os.path.join(\"Validation\",\"BCs_unit_test\"),\"9 9 9\",file_to_redirect_stdout=os.path.join(out_dir,results_file))\n",
     "end = time.time()\n",
@@ -571,7 +585,7 @@
     }
    ],
    "source": [
-    "with open(os.path.join(out_dir,results_file),\"r\") as file:\n",
+    "with open(results_file,\"r\") as file:\n",
     "    output = file.readline()\n",
     "    print(output)\n",
     "    if output!=\"All quantities agree at all points!\\n\": # If this isn't the first line of this file, something went wrong!\n",
@@ -615,13 +629,17 @@
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "\n",
+    "# Change to NRPy directory\n",
+    "os.chdir(\"../../../\")\n",
+    "\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -635,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
